[tool.poetry]
name = "fastapi-mlflow"
version = "0.5.0"
description = "Deploy mlflow models as JSON APIs with minimal new code."
authors = ["John Harrison <john.harrison@autotrader.co.uk>"]
readme = "README.md"
repository = "https://github.com/autotraderuk/fastapi-mlflow"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8"
mlflow = "^2.0.1"
pydantic = "^1.10.0"
fastapi = "^0.96.0"

[tool.poetry.group.dev.dependencies]
black = ">=22"
fastapi = {extras = ["all"], version = ">=0.96.0"}
flake8-bugbear = "^22.1.11"
isort = "^5.10.1"
pytest = "^6.2.5"
pandas = "^1.2.0"
pandas-stubs = "^1.2.0"
numpy = "^1.22.1"
mypy = "^1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
