[tool.poetry]
name = "fastapi-mlflow"
version = "0.6.4"
description = "Deploy mlflow models as JSON APIs with minimal new code."
authors = ["John Harrison <john.harrison@autotrader.co.uk>"]
readme = "README.md"
repository = "https://github.com/autotraderuk/fastapi-mlflow"
license = "Apache-2.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.dependencies]
python = ">=3.8"
mlflow = "^2.0.1"
numpy = "^1.22.1"
orjson = "^3.9.5"
pandas = "^1.2.0"
pydantic = "^2.2.0"
fastapi = ">=0.100.0, <1"

[tool.poetry.group.dev.dependencies]
fastapi = {extras = ["all"], version = ">=0.100.0, <1"}
mypy = "^1.3"
pytest = "^7"
pandas-stubs = "^1.2.0"
pytest-asyncio = "^0.21.1"
ruff = "^0.8.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
